Overflow x fixes

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -8,6 +8,10 @@
   }
 }
 
+.main-container {
+  overflow-x: hidden;
+}
+
 .form-control {
   border: 1px solid #000;
   border-radius: 0;
